# Self-Designing-Neural-Networks--SDNN-

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
experiments/scripts/: analyze_results.py
src/architectai/: __init__.py
src/architectai/api/: __init__.py  endpoints.py  schemas.py  server.py
src/architectai/cli/: __init__.py  args.py  commands.py  main.py
src/architectai/codegen/: __init__.py  compiler.py  optimizer.py  pytorch_generator.py  templates.py
src/architectai/core/: __init__.py  dsl.py  graph.py  primitives.py
src/architectai/evaluation/: __init__.py  base.py  image_classification.py  metrics.py  multimodal.py  object_detection.py  profiler.py  sequence_modeling.py
src/architectai/evolution/: __init__.py  crossover.py  mutator.py  population.py  search_space.py  selector.py
src/architectai/hardware/: __init__.py  constraints.py  device_profiles.py  edge_optimizer.py  quantization.py
src/architectai/reasoning/: __init__.py  engine.py  explainer.py  knowledge_base.py  rules.py
src/architectai/system/: __init__.py  architectai.py  config.py  logger.py  state.py
src/architectai/utils/: __init__.py  hash.py  io.py  parallel.py  registry.py
src/architectai/viz/: __init__.py  evolution_viz.py  graph_viz.py  pareto_viz.py  report_generator.py
tests/: __init__.py  conftest.py  test_codegen.py  test_dsl.py  test_graph.py
